--- a/index.html
+++ b/index.html
@@ -3,5 +3,92 @@
     <head>  
     </head>
     <body>
+        <div id="wrapper">
+            <div id="top"></div>
+                <div id="iconsOne">
+                    <a href="#"><img src="img/iconos.png"></a>
+                <div id="topMenu">
+                    <ul id="nav-list" class="clearfix">
+                        <li><a href="#">quienes Somos</a></li>
+                        <li><a href="#">servicios</a></li>
+                        <li><a href="#">paquetes</a></li>
+                        <li><a href="#">contato</a></li>
+                        <li><a href="#"><img src="img/fb.png" alt=""></a></li>
+                    </ul>
+                </div>
+            <div id="slider">
+                <div>
+                    <img src="img/portada.jpg" alt="">
+                </div>
+            </div>
+            <div id="packages">
+                <div id="title">
+                    <h3>paquetes destacados</h3>
+                </div>
+                <div id="img-all">
+                    <div class="img">
+                       <a href="">
+                        <img src="img/barco.jpg" alt="">
+                       </a>
+                    </div>
+                    <div class="img">
+                        <a href="">
+                            <img src="img/sele.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="img">
+                        <a href="">
+                            <img src="img/hotel.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="img">
+                        <a href="">
+                         <img src="img/barco.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="img">
+                        <a href="">
+                            <img src="img/sele.jpg" alt="">
+                        </a>
+                    </div>
+                    <div class="img">
+                        <a href="">
+                            <img src="img/hotel.jpg" alt="">
+                        </a>
+                     </div>
+                </div>
+            </div>
+            <div id="aboutUs">
+                <div id="iconsTwo">
+                    <a href="#" target="_blank"><img src="img/iconos.png"></a>
+                </div>
+                <div id="paragraph">
+                    <h2>
+                        QUIÉNES SOMOS
+                    </h2>
+                    <p>
+                        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.
+
+                        "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco."Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.  
+                    </p>
+                </div>
+            </div>
+            <div id="contact">
+                <div id="lowMenu">
+                    <ul id="nav-list" class="clearfix">
+                        <li><a href="#">quienes Somos</a></li>
+                        <li><a href="#">servicios</a></li>
+                        <li><a href="#">paquetes</a></li>
+                        <li><a href="#">contato</a></li>
+                    </ul> 
+                </div>
+                <div id="facebook">
+                    <a href="#"><img src="img/fb.png" alt=""></a>
+                </div>
+                <div id="search">
+                    <div></div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
