--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="es">
     <head>  
+        <meta name="description" content="travel quizz"/>
+	    <meta name="keywords" content="Palabra, Palabra"/>
+	    <meta charset="utf-8" />
+        <link rel="stylesheet" type="text/css" href="public/css/styles.css"/>
     </head>
     <body>
         <div id="wrapper">
-            <div id="top"></div>
+
+            <!-- Top -->
+            <div id="top" class="clearfix">
                 <div id="iconsOne">
-                    <a href="#"><img src="img/iconos.png"></a>
+                    <img src="img/iconos.png">
+                </div>
                 <div id="topMenu">
                     <ul id="nav-list" class="clearfix">
                         <li><a href="#">quienes Somos</a></li>
@@ -16,11 +23,13 @@
                         <li><a href="#"><img src="img/fb.png" alt=""></a></li>
                     </ul>
                 </div>
-            <div id="slider">
-                <div>
-                    <img src="img/portada.jpg" alt="">
-                </div>
             </div>
+            <!-- Slider -->    
+            <div id="slider">
+                    <img src="img/portada.jpg" alt="">
+            </div>
+
+            <!-- Pack --> 
             <div id="packages">
                 <div id="title">
                     <h3>paquetes destacados</h3>
@@ -58,6 +67,8 @@
                      </div>
                 </div>
             </div>
+
+            <!-- About Us --> 
             <div id="aboutUs">
                 <div id="iconsTwo">
                     <a href="#" target="_blank"><img src="img/iconos.png"></a>
@@ -73,6 +84,8 @@
                     </p>
                 </div>
             </div>
+
+            <!-- Contact --> 
             <div id="contact">
                 <div id="lowMenu">
                     <ul id="nav-list" class="clearfix">
