--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div id="title">
                     <h3>paquetes destacados</h3>
                 </div>
-                <div id="img-all">
+                <div class="img-all clearfix">
                     <div class="img">
                        <a href="">
                         <img src="img/barco.jpg" alt="">
@@ -50,10 +50,12 @@
                             <img src="img/hotel.jpg" alt="">
                         </a>
                     </div>
+                </div>
+                <div class="img-all clearfix">
                     <div class="img">
-                        <a href="">
-                         <img src="img/barco.jpg" alt="">
-                        </a>
+                       <a href="">
+                        <img src="img/barco.jpg" alt="">
+                       </a>
                     </div>
                     <div class="img">
                         <a href="">
@@ -64,7 +66,7 @@
                         <a href="">
                             <img src="img/hotel.jpg" alt="">
                         </a>
-                     </div>
+                    </div>
                 </div>
             </div>
 
