agregando los estilos de packages

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
             </div>
 
             <!-- About Us --> 
-            <div id="aboutUs">
+            <div id="aboutUs" class="clearfix">
                 <div id="iconsTwo">
-                    <a href="#" target="_blank"><img src="img/iconos.png"></a>
+                    <img src="img/iconos.png">
                 </div>
                 <div id="paragraph">
                     <h2>
