--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     </ul> 
                 </div>
                 <div id="facebook">
-                    <a href="#"><img src="img/fb.png" alt=""></a>
+                    <img src="img/fb.png" alt="">
                 </div>
                 <div id="search">
                     <div></div>
