Modificación de breakpoint

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <img src="img/barco.jpg" alt="">
                        </a>
                     </div>
-                    <div class="img">
+                    <div class="img marg">
                         <a href="">
                             <img src="img/sele.jpg" alt="">
                         </a>
@@ -50,21 +50,21 @@
                             <img src="img/hotel.jpg" alt="">
                         </a>
                     </div>
-                    <div class="img">
+                    <div class="img marg">
                         <a href="">
                          <img src="img/barco.jpg" alt="">
                         </a>
-                     </div>
-                     <div class="img">
+                    </div>
+                    <div class="img">
                          <a href="">
                              <img src="img/sele.jpg" alt="">
                          </a>
-                     </div>
-                     <div class="img">
+                    </div>
+                    <div class="img marg">
                          <a href="">
                              <img src="img/hotel.jpg" alt="">
                          </a>
-                     </div>
+                    </div>
                 </div>
             </div>
 
